--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,14 @@ LICENSE
 README.md
 ros/build/*
 ros/devel/*
+ros/src/styx/bridge.pyc
+ros/src/styx/conf.pyc
+ros/src/tl_detector/light_classification/__init__.pyc
+ros/src/tl_detector/light_classification/tl_classifier.pyc
+ros/src/twist_controller/lowpass.pyc
+ros/src/twist_controller/pid.pyc
+ros/src/twist_controller/twist_controller.pyc
+ros/src/twist_controller/yaw_controller.pyc
 data/*
 imgs/*
 requirements.txt
